<resources>
    <string name="app_name">Tamasha.live</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="grid_view">GridView</string>
    <string name="hero_view">HeroView</string>
    <string name="active_speaker_view">Active Speaker View</string>
    <string name="audio_only_view">Audio Only</string>
    <string name="title_activity_meeting">MeetingActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_verify_number">VerifyNumberActivity</string>
    <string name="next">Next</string>
    <string name="terms_condition_text">We are committed to safeguarding the privacy of our Users</string>
    <string name="enter_mobile_no">Enter mobile no.</string>
    <string name="_91">+91</string>
    <string name="text_title">By tapping Next, message and data Charges may apply.</string>
    <style name="referral_code">Get Rs x with your friends referral code</style>
    <string name="partnerKey">AGekQ4525877e047847b4afd6fdaf9eb9b776</string>
    <string name="trucaller_text">Do you have truecaller id? Login Here</string>
    <string name="share_pref">Login_Response_SharedPref</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_notifications">Notifications</string>
    <string name="sharePref_playerId">playerId</string>
    <string name="sharedPref_loginStatus">alreadyLoggedIn</string>
    <string name="sharedPref_walletId">walletId</string>
    <string name="sharedPref_authToken">authToken</string>
    <string name="sharedPref_newUserStatus">newUser</string>
    <string name="title_home">Home</string>
    <string name="title_discover">Discover</string>
    <string name="title_play">Play</string>
    <string name="title_club">Club</string>
    <string name="refresh_earn"><![CDATA[Refresh & Earn]]></string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_activity_navigation_drawer2">NavigationDrawer2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_leaderboard">Leaderboard</string>
    <string name="menu_help">Help</string>
    <string name="menu_logout">Logout</string>
    <string name="referral_code">Get Rs x with your friend\'s referral code.</string>
    <string name="help_and_support">Help and Support</string>
    <string name="faqs">FAQs</string>
    <string name="settings">Settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="kyc_title">Complete KYC to unlock Withdrawal</string>
</resources>