<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_drawer_board"
    app:startDestination="@string/menu_leaderboard">

    <fragment
        android:id="@+id/nav_leaderboard"
        android:name="com.tamasha.vedioaudiostreamingapp.uis.drawerfragment.LeaderboardFragment"
        android:label="@string/menu_leaderboard"
        tools:layout="@layout/fragment_leaderboard" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.tamasha.vedioaudiostreamingapp.uis.drawerfragment.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.tamasha.vedioaudiostreamingapp.uis.drawerfragment.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />


</navigation>