<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.tamasha.vedioaudiostreamingapp.uis.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_discover"
        android:name="com.tamasha.vedioaudiostreamingapp.uis.discover.DiscoverFragment"
        android:label="@string/title_discover"
        tools:layout="@layout/fragment_discover" />

    <fragment
        android:id="@+id/navigation_play"
        android:name="com.tamasha.vedioaudiostreamingapp.uis.play.PlayFragment"
        android:label="@string/title_play"
        tools:layout="@layout/fragment_play" />
    <fragment
        android:id="@+id/navigation_club"
        android:name="com.tamasha.vedioaudiostreamingapp.uis.club.ClubFragment"
        android:label="ClubFragment"
        tools:layout="@layout/fragment_club"/>
    <fragment
        android:id="@+id/navigation_refresh"
        android:name="com.tamasha.vedioaudiostreamingapp.uis.refreshearn.RefreshEarnFragment"
        android:label="PlayFragment"
        tools:layout="@layout/fragment_refresh_earn"/>
</navigation>